Fixed some missing colors

--- a/css/main.css
+++ b/css/main.css
@@ -224,7 +224,7 @@ screen and (-ms-high-contrast: none) {
 }
 
 .footer {
-    background-color: #66c4e6;
+    background-color: #97772c;
     padding: 4.8rem 0
 }
 
@@ -1014,7 +1014,7 @@ section .row span {
 
 #projects .project-wrapper__image .thumbnail:hover {
     outline-offset: 8px;
-    outline-color: #55eced
+    outline-color: #b29146
 }
 
 #projects .modal {
@@ -1363,7 +1363,7 @@ section .row span {
 
 ::-webkit-scrollbar-thumb {
     border-radius: 10px;
-    background-color: #b29146
+    background-color: #ac862d
 }
 
 html {
